Fix vertical alignment of the "OK" text

--- a/src/vs/base/parts/quickinput/browser/media/quickInput.css
+++ b/src/vs/base/parts/quickinput/browser/media/quickInput.css
@@ -111,7 +111,6 @@
 .quick-input-action .monaco-text-button {
 	font-size: 85%;
 	padding: 0 6px;
-	line-height: initial;
 	display: flex;
 	height: 100%;
 	align-items: center;
